assets/custom.css
.preview {
  display: none !important;
}

/* Override detault balises */
html,
body {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  margin: 0;
  font-family: Verdana;
  font-size: 16px;
  font-weight: 400;
  scroll-behavior: smooth;
}

*,
*:before,
*:after {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
  outline: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: Montserrat;
  font-weight: 700;
  margin: 0;
}

h1,
h2 {
  font-size: 3.75rem;
  line-height: 3.75rem;
}

h3 {
  font-size: 1.875rem;
}

h4 {
  font-size: 1.375rem;
}

@media only screen and (max-width: 1024px) {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    text-align: left;
  }

  h1,
  h2 {
    font-size: 2.5rem;
    line-height: 2.5rem;
  }

  h3 {
    font-size: 1.25rem;
  }

  h4 {
    font-size: 1rem;
  }
}

div {
  scroll-margin-top: 5rem;
}

ul {
  margin: 0;
  padding: 0;
}

a,
a:hover {
  color: black;
  text-decoration: none;
}

p {
  font-size: 1rem;
  margin: 0;
}

@media only screen and (max-width: 768px) {
  p {
    font-size: 0.875rem;
  }
}

address {
  font-style: normal;
}

.page {
  max-width: 1600px;
  margin: 0 auto;
}

.full-screen,
.banner {
  min-height: calc(100vh - 4.5rem);
}


.wrapper {
  padding: 6.25rem 8rem;
  width: 100%;
  margin: auto;
  overflow: hidden;
}

@media only screen and (max-width: 1024px) {
  .wrapper {
    padding: 4.75rem 2rem;
  }
}

@media only screen and (max-width: 768px) {
  .wrapper {
    padding: 2rem;
  }
}

/* CSS for text */

.plus {
  position: relative;
  margin-left: 3.25rem;
}

.plus:before {
  content: '+';
  position: absolute;
  left: -3.5rem;
  text-align: left;
  font-size: 5rem;
}

@media only screen and (max-width: 768px) {
  .plus {
    margin-left: 2.25rem;
  }

  .plus:before {
    left: -2.5rem;
    font-size: 3.675rem;
  }
}

.text-light-grey {
  color: #787878;
}

.text-dark-grey {
  color: #5A5A5A;
}

.text-xl {
  font-size: 1.25rem;
}

.text-l {
  font-size: 1.125rem;
}

/* Class unused this is the default value */
.text,
.text-m {
  font-size: 1rem;
}

.text-s {
  font-size: 0.875rem;
}

.text-xs {
  font-size: 0.75rem;
}

/* CSS for Navigation Bar */
nav {
  position: sticky;
  top: 0;
  height: 4.5rem;
  padding: 1.25em;
  overflow: hidden;
  background: white;
  z-index: 1000;
}
nav .mobile-header {
  display: none;
}

nav ul {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  text-align: center;
  gap: 6.25rem;
  height: 2rem;
}

nav li {
  list-style-type: none;
  font-weight: 500;
}

nav li.menu-element a {
  display: inline-block;
  width: 6.25rem;
  padding: 2px;
  color: #787878;
  border: 2px solid transparent;
}

nav li.menu-element a:hover {
  color: black;
  border: 2px solid black;
  border-radius: 25px;
}


nav li:not(.menu-element) {
  display: none;
  width: 20px;
}

nav .logo {
  height: 2rem;
}

@media only screen and (max-width: 768px) {
  nav {
    background: white;
    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.05);
    transition: box-shadow 0.3s linear 0s;
    display: flex;
    flex-direction: column;
    padding: 1.25rem 2rem;
  }

  nav ul {
    display: none;
  }

  nav li:not(.menu-element) {
    display: none;
  }

  nav .mobile-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    justify-items: center;
  }

  nav .mobile-header img,
  nav .mobile-header svg {
    height: 2rem;
  }

  #navbar-x-icon {
    display: none;
  }

  nav.open {
    transition: all 0.5s ease-in-out 0s;
    height: 100vh;
  }

  nav.open #navbar-x-icon {
    display: block;
  }

  nav.open #navbar-bar-icon {
    display: none;
  }

  nav.open ul {
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: center;
    align-items: center;
    gap: 2.75rem
  }

  nav li {
    font-size: 2rem;
  }

  nav li.menu-element a {
    width: 11rem;
  }
}
/* CSS for Banner */

.banner {
  display: flex;
}

.banner > div:first-child {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  gap: 2.75rem;
  max-width: 51rem;
  margin: auto;
}

.banner .title {
  font-size: 4.375rem;
  line-height: 4.375rem;
}

@media only screen and (max-width: 768px) {
  .banner > div:first-child {
    gap: 1.5rem;
  }

  .banner .title {
    font-size: 2.375rem;
    line-height: 2.375rem;
  }

  .banner h1,
  .banner h3,
  .banner p {
    width: 100%;
    text-align: left;
  }
}

.banner h3 {
  font-weight: 400;
}

.banner p {
  margin: auto;
}

#scroll-indicator {
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
  font-weight: 700;
  gap: 0.5rem;
  transform: rotate(90deg);
  position: fixed;
  bottom: 30%;
  left: 5%
}

#scroll-indicator.hidden {
  display: none;
}

@media only screen and (max-width: 768px) {
  .banner > div {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1.5rem;
    max-width: 100%;
    margin: auto;
  }

  .banner .logo {
    height: 3rem;
  }

  .banner .title {
    text-align: left;
    font-weight: bold;
    font-family: Montserrat;
  }

  #scroll-indicator {
    bottom: 10%
  }

  @media only screen and (max-height: 700px) {
    #scroll-indicator {
      transform: translateX(-1.5rem) rotate(90deg);
      left: 0;
    }
  }
}

/* CSS for Index Page  */

.cards {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: stretch;
  gap: 2.75rem;
  overflow-x: scroll;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  width: 30%;
  min-width: 14rem;
  padding: 2rem;
  box-shadow: 0 8px 30px 0 rgba(0, 0, 0, 0.10);
}

.card img {
  width: 4rem;
  height: 4rem;
  border-radius: 50%;
  margin-bottom: 2.5rem;
}

.card h4 {
  width: 100%;
  margin-bottom: 1rem;
}
/* ... */

